--- a/GoContacts/Views/Contacts/ContactList.cshtml
+++ b/GoContacts/Views/Contacts/ContactList.cshtml
@@ -1,17 +1,55 @@
 ﻿
-@model IEnumerable<GoContacts.Models.Contact>
+@model GoContacts.ViewModels.ContactGroupTags
 @{
     ViewBag.Title = "Contacts";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    #group-tag-ribbon {
+        background: #726969;
+        border-radius: 16px;
+        padding: 6px 20px;
+        column-gap: 10px;
+    }
+    #group-tag-ribbon .btn {
+        background-color: #ffe37b;
+    }
+    #group-tag-ribbon .btn:hover {
+        background-color: #434633;
+    }
+    .groupTag{
+        display: flex;
+    }
+    .groupTag p {
+        margin-bottom: 0px;
+    }
+</style>
+
 <h2>Your Contacts</h2>
 
+
 <div>
-    <div class="flex-column">
-        @Html.ActionLink("Create Contact", "Create", "Contacts", null, new { @class = "btn btn-outline-primary" })
-        @Html.ActionLink("Create Contact", "Create", "GroupTags", null, new { @class = "btn btn-outline-primary" })
-        <button class="btn btn-outline-danger" id="delete-seleted">Delete Selected</button>
+    <div class="d-flex m-2 action-lobby">
+        <a href="@Url.Action("Create", "Contacts")" class="btn btn-primary">New</a>
+        <a href="@Url.Action("Create", "GroupTags")" class="btn btn-success">Create Label</a>
+        <button class="btn btn-danger" id="delete-seleted">Delete Selected</button>
+    </div>
+    <div id="group-tag-ribbon" class="d-flex">
+        <a href="@Url.Action("Index", "Contacts")/" class="btn btn-outline-secondary">All</a>
+        @foreach (GoContacts.Models.GroupTag groupTag in Model.GroupTags)
+        {
+            <div class="groupTag">
+                <a href="@Url.Action("Index", "Contacts")/@groupTag.Id" class="btn btn-outline-secondary">
+                    <p>@groupTag.Name</p>
+                </a>
+                <a href="@Url.Action("Edit","GroupTags")/?group=@groupTag.Id" class="btn btn-outline-secondary">
+                    <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M20.8477 1.87868C19.6761 0.707109 17.7766 0.707105 16.605 1.87868L2.44744 16.0363C2.02864 16.4551 1.74317 16.9885 1.62702 17.5692L1.03995 20.5046C0.760062 21.904 1.9939 23.1379 3.39334 22.858L6.32868 22.2709C6.90945 22.1548 7.44285 21.8693 7.86165 21.4505L22.0192 7.29289C23.1908 6.12132 23.1908 4.22183 22.0192 3.05025L20.8477 1.87868ZM18.0192 3.29289C18.4098 2.90237 19.0429 2.90237 19.4335 3.29289L20.605 4.46447C20.9956 4.85499 20.9956 5.48815 20.605 5.87868L17.9334 8.55027L15.3477 5.96448L18.0192 3.29289ZM13.9334 7.3787L3.86165 17.4505C3.72205 17.5901 3.6269 17.7679 3.58818 17.9615L3.00111 20.8968L5.93645 20.3097C6.13004 20.271 6.30784 20.1759 6.44744 20.0363L16.5192 9.96448L13.9334 7.3787Z" fill="#0F0F0F" />
+                    </svg>
+                </a>
+            </div>
+        }
     </div>
     <table class="table">
         <thead>
@@ -27,12 +65,12 @@
             </tr>
         </thead>
         <tbody>
-            @if (Model.Any())
+            @if (Model.Contacts.Any())
             {
-                foreach (GoContacts.Models.Contact contact in Model)
+                foreach (GoContacts.Models.Contact contact in Model.Contacts)
                 {
                     <tr data-contact-id="@contact.Id">
-                        <td><input type="checkbox" name="ids" value="@contact.Id"/></td>
+                        <td><input type="checkbox" name="ids" value="@contact.Id" /></td>
                         <td>@contact.Name</td>
                         <td>@contact.Email</td>
                         <td>@contact.Phone</td>
@@ -68,37 +106,39 @@
 
 @section scripts
 {
-<script>
-    $(document).ready(function() {
-        $('.js-delete').click(function() {
-            if (confirm('Are you sure you want to delete this contact?')) {
-                window.location.href = $(this).attr('href');
-            }
-            return false;
-        });
-        $('#delete-seleted').click(function () {
-            var ids = [];
-            $('tr[data-contact-id]').each(function () {
-                if ($(this).find('input[type=checkbox]').is(':checked'))
-                    ids.push($(this).attr('data-contact-id'));
+    <script>
+        $(document).ready(function () {
+            $('.js-delete').click(function () {
+                if (confirm('Are you sure you want to delete this contact?')) {
+                    window.location.href = $(this).attr('href');
+                }
+                return false;
             });
+            $('#delete-seleted').click(function () {
+                var ids = [];
+                if (confirm('Are you sure you want to delete seleted contact?')) {
+                    $('tr[data-contact-id]').each(function () {
+                        if ($(this).find('input[type=checkbox]').is(':checked'))
+                            ids.push($(this).attr('data-contact-id'));
+                    });
 
-            $.ajax({
-                url: 'https://localhost:44353/API/Contacts/DeleteMultiple',
-                type: 'POST',
-                data: JSON.stringify(ids),
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    window.alert('Deleted selected contacts');
-                    document.location.reload();
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    alert('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
-                    console.log('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
+                    $.ajax({
+                        url: 'https://localhost:44353/API/Contacts/DeleteMultiple',
+                        type: 'POST',
+                        data: JSON.stringify(ids),
+                        contentType: 'application/json; charset=utf-8',
+                        success: function (data) {
+                            window.alert('Deleted selected contacts');
+                            document.location.reload();
+                        },
+                        error: function (jqXHR, textStatus, errorThrown) {
+                            alert('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
+                            console.log('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
+                        }
+                    });
                 }
             });
         });
-    });
 
-</script>
+    </script>
 }
