--- a/GoContacts/Views/Contacts/Index.cshtml
+++ b/GoContacts/Views/Contacts/Index.cshtml
@@ -77,25 +77,27 @@
         });
         $('#delete-seleted').click(function () {
             var ids = [];
-            $('tr[data-contact-id]').each(function () {
-                if ($(this).find('input[type=checkbox]').is(':checked'))
-                    ids.push($(this).attr('data-contact-id'));
-            });
+            if (confirm('Are you sure you want to delete seleted contact?')) {
+                $('tr[data-contact-id]').each(function () {
+                    if ($(this).find('input[type=checkbox]').is(':checked'))
+                        ids.push($(this).attr('data-contact-id'));
+                });
 
-            $.ajax({
-                url: 'https://localhost:44353/API/Contacts/DeleteMultiple',
-                type: 'POST',
-                data: JSON.stringify(ids),
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    window.alert('Deleted selected contacts');
-                    document.location.reload();
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    alert('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
-                    console.log('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
-                }
-            });
+                $.ajax({
+                    url: 'https://localhost:44353/API/Contacts/DeleteMultiple',
+                    type: 'POST',
+                    data: JSON.stringify(ids),
+                    contentType: 'application/json; charset=utf-8',
+                    success: function (data) {
+                        window.alert('Deleted selected contacts');
+                        document.location.reload();
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        alert('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
+                        console.log('Error while deleting. Status: ' + textStatus + '. Error: ' + errorThrown + jqXHR.status + jqXHR.statusText + jqXHR.responseText);
+                    }
+                });
+            }            
         });
     });
 
