--- a/GoContacts/Views/GroupTags/GroupTagForm.cshtml
+++ b/GoContacts/Views/GroupTags/GroupTagForm.cshtml
@@ -24,6 +24,7 @@
 
 @section scripts
     {
+    @Scripts.Render("~/bundles/jqueryval");
     <script>
         $('#delete-group-tag').click(function () {
             if (confirm('Are you sure you want to delete this Group?')) {
